--- a/app/views/pages/home/home.styl
+++ b/app/views/pages/home/home.styl
@@ -90,7 +90,7 @@ $dark_overlay_color = rgba(0, 0, 0, $dark_overlay_opacity)
     }
 }
 
-.articles, .home__counts, .featureBlock {
+.articles, .home__counts, .featureBlock, .featuresBlock {
     .article-box {
         width 300px
         max-width 100%
