design: taller navbar

--- a/app/views/shared/layout/html/html.styl
+++ b/app/views/shared/layout/html/html.styl
@@ -5,7 +5,7 @@ html, body, .site-wrapper {
     touch-action manipulation
 }
 body {
-    padding-top 50px
+    padding-top $navBar_height
 }
 
 +isAbove($laptop) {
