--- a/app/views/shared/layout/partials/feedback/feedback.styl
+++ b/app/views/shared/layout/partials/feedback/feedback.styl
@@ -271,7 +271,7 @@ $menuboxBorderRadius = 4px;
     }
     .menubox {
         overflow auto
-        top vrBlock(2)
+        top "calc(%s - 0.75rem)" % $navBar_height
         right vrBlock(1)
         left initial
         bottom initial
