--- a/app/views/shared/layout/partials/navigation/navigation.styl
+++ b/app/views/shared/layout/partials/navigation/navigation.styl
@@ -49,7 +49,7 @@ $menuBackgroundColor = $navBar_background_color //#76a576
         position relative
         z-index 10
         //pretty
-        margin-top 0.6rem
+        margin-top "calc(%s / 2)" % ($navBar_height - 2.3rem)
         svg {
             display inline-block
             width 2.3rem
@@ -90,7 +90,7 @@ $menuBackgroundColor = $navBar_background_color //#76a576
                     height 10px
                     background tomato
                     border-radius 50%
-                    top 15px
+                    top "calc(%s - 15px)" % ($navBar_height / 2)
                     right 5px
                     pointer-events: none
                 }
