design: home hero

--- a/app/views/shared/style/commonClasses.styl
+++ b/app/views/shared/style/commonClasses.styl
@@ -750,7 +750,7 @@ h1, h2, h3, h4, h5, h6 {
     right 0
     bottom 0
     padding 5px 10px 0 10px
-    color rgba(255, 255, 255, 0.5)
+    color white
     a {
         color inherit
         text-decoration underline
