design: home page counts

--- a/app/views/pages/home/home.styl
+++ b/app/views/pages/home/home.styl
@@ -131,11 +131,18 @@ $dark_overlay_color = rgba(0, 0, 0, $dark_overlay_opacity)
             color #777
         }
         &--stats {
+          text-align: center
+          padding: 32px
+            img {
+              margin 16px
+            }
             h3 {
                 margin 0
+                font-weight: normal
             }
             div {
                 font-size 30px
+                margin-bottom: 8px
             }
             
             p {
