--- a/app/views/pages/resource/blocks/counts/counts.styl
+++ b/app/views/pages/resource/blocks/counts/counts.styl
@@ -51,7 +51,8 @@
 
     &__item {
       flex: 1 1 auto;
-      width: 'calc(100% / 4 - %s)' % ($halfGutter * 3);
+      width: auto;
+      max-width: 280px;
     }
   }
 }
