--- a/app/views/pages/home/block_media.styl
+++ b/app/views/pages/home/block_media.styl
@@ -1,85 +1,33 @@
 .block {
   &__header {
-    font-size: 36px
-    margin: 32px 0
+    font-size: 36px;
+    padding: 32px 0;
+    padding-left: 32px;
+    margin: 0;
   }
+
+  &__description {
+    margin: 16px 32px 80px 32px;
+    padding: 16px;
+    max-width: 100%;
+    width: 480px;
+    font-size: 18px;
+    line-height: 32px;
+  }
+
   &__actions {
     margin: 0 -16px;
   }
+
   &__action {
-    margin: 0 16px
+    margin: 0 16px;
   }
 }
 
-.block_carousel {
-  .carousel {
-    cursor: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    .carousel-inner > .item {
-      transition: transform .4s ease-in-out;
-    }
-    > a{
-      flex: 0 0 auto;
-      color: #4C9C2E;
-    }
-    > div {
-      flex: 1 1 auto;
-    }
-    &__arrow {
-      width: 64px;
-      height: 64px;
-      font-size: 48px;
-      border-radius: 50%;
-      background: white;
-      display: inline-block;
-      text-align: center;
-      line-height: 64px;
-      box-shadow: 0 3px 5px 2px rgba(0, 0, 0, 0.1);
-    }
-    &__dots {
-      display: flex;
-      justify-content: center;
-      margin: 64px 0;
-      li {
-        border: 1px solid #707070;
-        display: inline-block;
-        width: 12px;
-        height: 12px;
-        border-radius: 50%;
-        margin: 0 8px;
-        &.active {
-          background: #4B5348;
-        }
-      }
-    }
-  }
-}
-
-.block_slide {
-  &__content {
-    display: flex
-    font-size: 18px
-    line-height 2em
-    margin: 0 -8px;
-    > div {
-      flex: 1 1 50%
-      padding: 32px
-      margin: 0 8px;
-    }
-  }
-  &__textContent {
-    padding: 16px
-  }
-  &__imageArea {
-    font-size: 12px;
-    line-height: 16px;
-    margin: 32px 72px 16px 48px!important;
-    padding: 0!important;
-    img {
-      margin-bottom: 32px;
++isAbove(768px) {
+  .block {
+    &__header {
+      padding-top: 64px
     }
   }
 }
