--- a/app/views/pages/home/home.styl
+++ b/app/views/pages/home/home.styl
@@ -15,7 +15,7 @@ $dark_overlay_color = rgba(0, 0, 0, $dark_overlay_opacity)
         color white
         position relative
         &__hero-text {
-            padding vrBlock(8) 0
+            padding vrBlock(8) 16px
         }
         &__name {
           font-size: 18px;
