--- a/app/views/pages/resource/blocks/media/media.styl
+++ b/app/views/pages/resource/blocks/media/media.styl
@@ -1,24 +1,32 @@
 .block_media {
   &__content {
+    padding-bottom: 64px;
     font-size: 18px;
-    line-height: 2em;
-    > div {
-      padding: 32px;
+    line-height: 1.8em;
+    &__mediaArea {
+      text-align: center
     }
-  }
-
-  &__textContent {
-    padding: 16px;
+    > div {
+      padding: 16px;
+      img {
+        max-width: 100%;
+        width: 480px;
+      }
+    }
   }
 }
 
-+isAbove(576px) {
++isAbove(768px) {
   .block_media {
     &__content {
       display: flex;
+      margin: 0 -8px
       > div {
         flex: 1 1 50%;
         margin: 0 8px;
+        img {
+          padding: 0;
+        }
       }
     }
   }
