--- a/app/views/shared/style/_variables.styl
+++ b/app/views/shared/style/_variables.styl
@@ -32,7 +32,7 @@ $orangePeelLight = rgb(255, 224, 156)
 $blueTintedBlack = #4e565f
 $lightBackground = #f7f9fa
 $lighterBackground = #fdfdfe
-$greyBackground := #e2e7ea
+$greyBackground := #E8EBED
 $alertBackground = #ffffdf
 $stripeBorderColor = #dbe3e7
 $discreetInk = #666
