block types wired to contentful

--- a/app/views/pages/resource/blocks/carousel/carousel.styl
+++ b/app/views/pages/resource/blocks/carousel/carousel.styl
@@ -57,9 +57,24 @@
       margin: 0 8px;
     }
   }
+  &__textContent__body {
+    margin-top: 32px;
+  }
+  &__textContent__title__count {
+    margin-top: 16px;
+  }
+  &__textContent__title__small {
+    font-size: 16px;
+    margin-top: 8px;
+  }
   &__imageArea {
     display: none;
     font-size: 12px;
+    &--rounded {
+      img {
+        border-radius: 50%;
+      }
+    }
     img {
       width: 480px
       max-width: 100%;
