--- a/app/views/pages/resource/blocks/media/media.styl
+++ b/app/views/pages/resource/blocks/media/media.styl
@@ -30,4 +30,11 @@
       }
     }
   }
+  .block-reverse {
+    &.block_media {
+      .block_media__content {
+        flex-direction: row-reverse;
+      }
+    }
+  }
 }
