--- a/app/views/shared/style/typography/_typography.styl
+++ b/app/views/shared/style/typography/_typography.styl
@@ -145,10 +145,10 @@ typographic() {
         color $bodyTextColor
     }
 
-    h1, h2 {
+    h1, h2, .h1, .h2 {
         font-weight 400
     }
-    h3 {
+    h3, .h3 {
         font-weight 500
     }
 
