--- a/app/views/shared/style/utilities.styl
+++ b/app/views/shared/style/utilities.styl
@@ -37,7 +37,7 @@
     background-color $paper
 }
 
-.bare-background {
+.bare-background, .gray-background {
     background-color $greyBackground
 }
 
