adjust block model

--- a/app/views/pages/resource/blocks/block_media.styl
+++ b/app/views/pages/resource/blocks/block_media.styl
@@ -27,6 +27,13 @@
     display: inline-block;
     margin: 0 16px;
   }
+  &__imageArea {
+    &--rounded {
+      img {
+        border-radius: 50%;
+      }
+    }
+  }
 }
 
 +isAbove(768px) {
